<resources>
    <string name="app_name">Page Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_note_create_now">No note. Create now!</string>
    <string name="create_note">Create note</string>
    <string name="save">Save</string>
    <string name="change_text_size">Change Text Size</string>
    <string name="save_as_note">Save as Note</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="name_is_special">Name is invalid with special character(s)!</string>
    <string name="name_is_empty">Name must be not empty!</string>
    <string name="file_is_exist">File is exist!</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
</resources>